--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
     </head>
     <body>
         <button onclick="window.location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'">Button</button>
+    <style>
+        button{
+            font-size: 3em;
+            border-radius: 10px;
+        }
+        button:hover{
+            cursor: pointer;
+        }
+    </style>
     </body>
 </html>
