--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Witze Generator</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="bootstrap.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script src="bootstrap.min.js"></script>
     </head>
     <body onload="fetchJoke('zufall')">
